fix: hard to read inline code tags

--- a/src/routes/[slug]/markdown.scss
+++ b/src/routes/[slug]/markdown.scss
@@ -47,4 +47,8 @@
   blockquote :last-child {
     margin-bottom: 0;
   }
+
+  :not(pre) > code {
+    color: var(--pico-contrast);
+  }
 }
